[project]
name = "test-secondbrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
respect-ignore-files = true
exclude = [
    ".venv/",
    ".ruff_cache/",
    ".pytest_cache/",
]

[tool.pytest.ini_options]
pythonpath = ["."]
